labs/letsencrypt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esp-srv
  labels:
    type: esp-srv
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress
